<resources>
    <string name="app_name">Coasters</string>
    <string name="username_hint">Username</string>
    <string name="hint_password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">SignUp</string>
    <string name="name_registration">Name</string>
    <string name="email_registration">Email</string>
    <string name="pas_registration">Password</string>
    <string name="pas_registration_again">Password again</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="name_text">Name</string>
    <string name="shape_text">Shape</string>
    <string name="country_text">Country</string>
    <string name="city_text">City</string>
    <string name="front_side_text">Front side</string>
    <string name="back_side_text">Back side</string>
    <string name="save_text">save</string>
    <string name="delete">delete</string>
    <string name="close_btn">close</string>
    <string name="delete_btn">delete</string>
    <string name="ans_restart">RESTART</string>

    <string-array name="chapelist">
        <item>Circle</item>
        <item>Square</item>
        <item>Oval</item>
    </string-array>
</resources>
