<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"
        android:visibility="visible" />
    <TextView
        android:text="COASTERS"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/colorTextBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_username"
        android:background="@drawable/text_view_custom"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/et_password"
        android:background="@drawable/text_view_custom"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_logIn"
            android:background="@drawable/buttons_main"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/btn_sign_up"
            android:textColor="@color/colorTextBlack"
            android:background="@color/colorBackground"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>