<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fr_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_recycler"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_text"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/info_text_size" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/info_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shape_text"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/info_text_size" />

        <Spinner
            android:id="@+id/et_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:outlineAmbientShadowColor="@color/colorTextLight"
            android:outlineSpotShadowColor="@color/colorTextLight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country_text"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/info_text_size" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="@dimen/info_text_size"
            android:textColor="@color/colorTextLight"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_text"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/info_text_size" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:textSize="@dimen/info_text_size"
            android:textColor="@color/colorTextLight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_in_form"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/front_side_text"
            android:textAlignment="center"
            android:textColor="@color/colorTextForShape"
            android:textSize="@dimen/info_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_side_text"
            android:textAlignment="center"
            android:textColor="@color/colorTextForShape"
            android:textSize="@dimen/info_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_front_side"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundGrey40"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/iv_back_side"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundGrey40"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/color_add_button"
        android:text="@string/save_text" />


</LinearLayout>