<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fr_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_in_form"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_text"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shape_text"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

        <TextView
            android:id="@+id/tv_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country_text"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_in_form"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_text"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_in_form"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/front_side_text"
            android:textAlignment="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_side_text"
            android:textAlignment="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/header_in_form" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/iv_get_front"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundGrey40"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/iv_get_back"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundGrey40"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/colorAddButton"
            android:text="close"
            android:textSize="@dimen/header_in_form" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorDeleteColor"
            android:text="@string/delete"
            android:textSize="@dimen/header_in_form" />
    </LinearLayout>


</LinearLayout>